--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,31 @@
 services:
   web:
     build: .
+    environment:
+      JAKARTA_PERSISTENCE_JDBC_URL: jdbc:postgresql://db:5432/tennis_match_scoreboard
+      JAKARTA_PERSISTENCE_JDBC_USER: postgres
+      JAKARTA_PERSISTENCE_JDBC_PASSWORD: postgres
+      HIBERNATE_DDL_AUTO: create-drop
     ports:
       - "8080:8080"
     depends_on:
-      db:
-        condition: service_healthy
+      - db
+
   db:
     image: postgres
     container_name: tennis_match_scoreboard_db
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
+    restart: always
     environment:
-#      POSTGRES_PASSWORD: postgres
-#      POSTGRES_USER: postgres
-      POSTGRES_DB: tennis_match_scoreboard
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
       POSTGRES_HOST_AUTH_METHOD: trust
+      POSTGRES_DB: tennis_match_scoreboard
+
+
     ports:
-      - "54333:5432"
+      - "5432:5432"
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 1s
