--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,12 @@
 [versions]
-hibernate_version = "7.0.0.Alpha2"
+hibernate_version = "6.5.0.Final"
 jakarta_servlet_api_version = "6.1.0-M2"
+slf4j_log4j12_version = "3.0.0-beta2"
+postgresql_version = "42.7.3"
 
 [libraries]
 jakarta-servlet-api = { module = "jakarta.servlet:jakarta.servlet-api", version.ref = "jakarta_servlet_api_version" }
-jakarta-transaction-api = { module = "jakarta.transaction:jakarta.transaction-api" }
 hibernate-core = { module = "org.hibernate.orm:hibernate-core", version.ref = "hibernate_version" }
-hibernate-platform = { module = "org.hibernate.orm:hibernate-platform", version.ref = "hibernate_version" }
+postgresql = { module = "org.postgresql:postgresql", version.ref = "postgresql_version" }
+slf4j-log4j12 = { module = "org.apache.logging.log4j:log4j-slf4j-impl", version.ref = "slf4j_log4j12_version" }
+
