--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       JAKARTA_PERSISTENCE_JDBC_URL: jdbc:postgresql://db:5432/tennis_match_scoreboard
       JAKARTA_PERSISTENCE_JDBC_USER: postgres
       JAKARTA_PERSISTENCE_JDBC_PASSWORD: postgres
-      HIBERNATE_DDL_AUTO: create-drop
+      HIBERNATE_DDL_AUTO: update
     ports:
       - "8080:8080"
     depends_on:
